--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     padding: 10px 40px;
     font-size: 18px;
     font-weight: 600;
-    background-color: #00eaff;
+    background-color: #00becf;
     border: 0;
     border-radius: 30px;
     cursor: pointer;
@@ -42,18 +42,32 @@ h2.titulo {
 }
 
 h2.titulo span {
-    color: #00eaff;
+    color: #00becf;
 }
 
 button:hover,
 form .btn-enviar input:hover {
-    box-shadow: 0px 0px 8px #00ffd9;
+    box-shadow: 0px 0px 8px #00becf;
     transform: scale(1.05);
 }
 
 /* ESTILO DO CABEÇALHO */
 header {
-    padding: 40px 4%;
+    width: 100%;
+    background-color: #022a32;
+    padding: 5px 4%;
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    transition: .5s;
+    z-index: 999999999999999999999999;
+}
+
+header.rolagem{
+    background-color: black;
+    padding: 5px 0;
+    box-shadow: 0 0 50px black;
 }
 
 header>.interface {
@@ -90,7 +104,7 @@ header nav.menu-desktop ul li {
 }
 
 .btn-abrir-menu i{
-    color: #00eaff;
+    color: #00becf;
     font-size: 40px;
 }
 
@@ -120,7 +134,7 @@ header nav.menu-desktop ul li {
 }
 
 .menu-mobile .btn-fechar i{
-    color: #00eaff;
+    color: #00becf;
     font-size: 30px;
 }
 
@@ -137,7 +151,7 @@ header nav.menu-desktop ul li {
 }   
 
 .menu-mobile nav ul li a:hover{
-    background-color: #00eaff;
+    background-color: #00becf;
     color: #000;
 }
 
@@ -170,7 +184,7 @@ section.topo-do-site .flex {
 }
 
 .topo-do-site .txt-topo-site h1 span {
-    color: #00eaff;
+    color: #00becf;
 }
 
 .topo-do-site .txt-topo-site p {
@@ -217,7 +231,7 @@ section.especiliadades .flex {
 
 .especiliadades .especialidades-box i {
     font-size: 70px;
-    color: #00eaff;
+    color: #00becf;
 }
 
 .especiliadades .especialidades-box h3 {
@@ -246,7 +260,7 @@ section.sobre .flex {
 }
 
 .sobre .txt-sobre h2 span {
-    color: #00eaff;
+    color: #00becf;
     display: block;
 }
 
@@ -258,7 +272,7 @@ section.sobre .flex {
 .sobre .txt-sobre p span {
     margin: 20px 0;
     text-align: justify;
-    color: #00eaff;
+    color: #00becf;
 }
 
 .btn-social button {
@@ -266,8 +280,7 @@ section.sobre .flex {
     height: 60px;
     border-radius: 50%;
     border: none;
-    background-color: #00eaff;
-    font-size: 22px;
+    background-color: #00becf;
     cursor: pointer;
     margin: 0 5px;
     transition: .2s;
@@ -295,7 +308,7 @@ section.portfolio .flex {
     background-position: 100% 0%;
     transition: 8s;
     cursor: pointer;
-    border-radius: 40px;
+    border-radius: 200px;
     position: relative;
 }
 
@@ -310,7 +323,7 @@ section.portfolio .flex {
     width: 100%;
     height: 100%;
     background-color: #000000b8;
-    border-radius: 40px;
+    border-radius: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -364,7 +377,7 @@ form .btn-enviar {
 
 form .btn-enviar input {
     width: 120px;
-    background-color: #00eaff;
+    background-color: #00becf;
     color: #000;
     font-weight: 700;
     cursor: pointer;
@@ -387,11 +400,11 @@ footer .line-footer {
 }
 
 .borda {
-    border-top: 2px solid #00eaff;
+    border-top: 2px solid #00becf;
 }
 
 footer .line-footer p i {
-    color: #00eaff;
+    color: #00becf;
     font-size: 22px;
 }
 
